2015-08-17  Laxmeesh Markod <m.laxmeesh@samsung.com>
        * db/source/printer/Samsung-M403x.xml,
          db/source/printer/Samsung-M408x.xml,
          db/source/printer/Samsung-C268x.xml,
          db/source/printer/Samsung-C48x.xml:
          Fixed PPD path in xml files

2015-07-29  Laxmeesh Markod <m.laxmeesh@samsung.com>
	* db/source/PPD/Samsung/PS/Samsung_M403x_Series.ppd,
	  db/source/PPD/Samsung/PS/Samsung_M408x_Series.ppd,
	  db/source/PPD/Samsung/PS/Samsung_C268x_Series.ppd,
	  db/source/PPD/Samsung/PS/Samsung_C48x_Series.ppd,
	  db/source/printer/Samsung-M403x.xml,
	  db/source/printer/Samsung-M408x.xml,
	  db/source/printer/Samsung-C268x.xml,
	  db/source/printer/Samsung-C48x.xml:
	  Added 4 new printers: Samsung M408X, M403x, C268x and C48x models

2015-06-05  Seiko Epson Corporation <linux-printer@epson.jp>
        * db/source/printer/Epson-E-850_Series.xml,
		  db/source/printer/Epson-EP-707A_Series.xml
		  db/source/printer/Epson-EP-777A_Series.xml
		  db/source/printer/Epson-EP-807A_Series.xml
		  db/source/printer/Epson-EP-907F_Series.xml
		  db/source/printer/Epson-EP-977A3_Series.xml
		  db/source/printer/Epson-L130_Series.xml
		  db/source/printer/Epson-L132_Series.xml
		  db/source/printer/Epson-L220_Series.xml
		  db/source/printer/Epson-L222_Series.xml
		  db/source/printer/Epson-L310_Series.xml
		  db/source/printer/Epson-L312_Series.xml
		  db/source/printer/Epson-L360_Series.xml
		  db/source/printer/Epson-L362_Series.xml
		  db/source/printer/Epson-L365_Series.xml
		  db/source/printer/Epson-L366_Series.xml
		  db/source/printer/Epson-L455_Series.xml
		  db/source/printer/Epson-L456_Series.xml
		  db/source/printer/Epson-L565_Series.xml
		  db/source/printer/Epson-L566_Series.xml
		  db/source/printer/Epson-L800.xml
		  db/source/printer/Epson-L810_Series.xml
		  db/source/printer/Epson-L850_Series.xml
		  db/source/printer/Epson-PF-70_Series.xml
		  db/source/printer/Epson-PX-047A_Series.xml