@@ -1,7 +1,7 @@
 <driver id="driver/ptouch">
   <name>ptouch</name>
   <pcdriver>PT</pcdriver>
-  <url>http://www.diku.dk/~panic/P-touch/</url>
+  <url>https://bitbucket.org/philpem/printer-driver-ptouch/branch/ptouch-driver</url>
   <thirdpartysupplied />
   <execution>
     <filter />
@@ -13,7 +13,12 @@
 
     Foomatic data to generate the PPD files is included with the
     driver, therefore we do not provide this data and PPDs here on the
-    OpenPrinting site,&lt;p&gt;
+    OpenPrinting site.&lt;p&gt;
+
+    The driver is not maintained any more by its original author, but the
+    &lt;a href=&quot;http://www.diku.dk/~panic/P-touch/&quot;&gt;old
+    homepage&lt;/a&gt; is still accessible. The development continues
+    &lt;a href=&quot;https://bitbucket.org/philpem/printer-driver-ptouch/branch/ptouch-driver&quot;&gt;here&lt;/a&gt; now.&lt;p&gt;
  
   </en>
   </comments>
