@@ -1,3 +1,8 @@
+2015-08-27  Till Kamppeter <till.kamppeter@gmail.com>
+
+	* db/source/driver/ptouch.xml: Updated homepage URL as maintainership
+	  of this driver has changed.
+
 2015-08-17  Laxmeesh Markod <m.laxmeesh@samsung.com>
         * db/source/printer/Samsung-M403x.xml,
           db/source/printer/Samsung-M408x.xml,
